<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="16dp"
    android:paddingTop="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:background="@color/bgMain"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_main"
        android:textColor="@color/colorTitle"
        android:textSize="27sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="159dp"
        android:layout_marginTop="15dp"
        app:srcCompat="@drawable/logo" />

    <EditText
        android:id="@+id/editValue1"
        android:layout_width="match_parent"
        android:layout_height="34dp"
        android:background="@android:color/background_light"
        android:layout_marginTop="20dp"
        android:hint="@string/edit_text1"
        android:inputType="number"/>

    <EditText
        android:id="@+id/editValue2"
        android:layout_width="match_parent"
        android:layout_height="34dp"
        android:background="@android:color/background_light"
        android:layout_marginTop="20dp"
        android:hint="@string/edit_text2"
        android:inputType="number"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="20dp"
        android:gravity="center">

        <Button
            android:id="@+id/btnRestar"
            android:layout_width="82dp"
            android:layout_height="wrap_content"
            android:text="@string/rest"
            android:textColor="@color/bgMain"
            android:textSize="20sp"
            android:textStyle="bold"
            android:onClick="onClick" />

        <Button
            android:id="@+id/btnSumar"
            android:layout_width="82dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@id/btnRestar"
            android:text="@string/sum"
            android:textColor="@color/bgMain"
            android:textSize="20sp"
            android:textStyle="bold"
            android:onClick="onClick" />

        <Button
            android:id="@+id/btnMultiplicar"
            android:layout_width="82dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@id/btnSumar"
            android:text="@string/mult"
            android:textColor="@color/bgMain"
            android:textStyle="bold"
            android:onClick="onClick" />

        <Button
            android:id="@+id/btnDividir"
            android:layout_width="82dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@id/btnMultiplicar"
            android:text="@string/div"
            android:textColor="@color/bgMain"
            android:textSize="19sp"
            android:textStyle="bold"
            android:onClick="onClick" />

    </RelativeLayout>

    <TextView
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lbl_resultado"
        android:textSize="20sp"
        android:textColor="@android:color/background_dark"/>


</LinearLayout>